--- a/lts-jobclient/pom.xml
+++ b/lts-jobclient/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>lts-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
