--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>lts-jobtracker</module>
         <module>lts-tasktracker</module>
         <module>lts-jobclient</module>
-        <module>lts-admin</module>
+        <!--<module>lts-admin</module>-->
         <module>lts-spring</module>
         <module>lts-startup</module>
         <module>lts-monitor</module>
