--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <spring.boot.version>1.3.3.RELEASE</spring.boot.version>
         <javassist.version>3.20.0-GA</javassist.version>
         <powermock.version>1.6.1</powermock.version>
+        <checkstyle.path>build/checkstyle</checkstyle.path>
     </properties>
 
     <dependencyManagement>
@@ -408,4 +409,36 @@
             <email>254963746@qq.com</email>
         </developer>
     </developers>
+
+    <build>
+        <plugins>
+            <!-- Checkstyle -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>${checkstyle.path}/lts_checks.xml</configLocation>
+                    <suppressionsLocation>${checkstyle.path}/suppressions.xml</suppressionsLocation>
+                    <suppressionsFileExpression>checkstyle.suppressions.file
+                    </suppressionsFileExpression>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                    <!--<excludes>**/org/apache/jsp/**,**/alluxio/thrift/**,**/alluxio/proto/**</excludes>-->
+                    <encoding>UTF-8</encoding>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <linkXRef>false</linkXRef>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>checkstyle</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
